<resources>
    <string name="app_name">SHAPE</string>
    <string name="hopon"><u>SHAPE</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorm">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type.
        </string>
    <string name="lorm2">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.          It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,         and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="resend_otp">Resend on</string>
    <string name="dont_have_rec">Don\'t received the OTP?</string>
    <string name="str_nav_logout">Logout</string>
    <string name="confirmation">Confirmation</string>
    <string name="logout_confirmation_text">Do you really want to logout?</string>
    <string name="CANCEL">Cancel</string>
    <string name="YES">Yes</string>
    <string name="DELETE">Delete</string>
    <string name="SAVE">Save</string>
    <string name="my_hint">Name*</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="share">Share To</string>
    <string name="please_wait">Please Wait</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_dob">Select Date</string>
    <string name="for_assistance_contact_91_9874563214">For assistance Contact (<u>+91 9619638896</u>)</string>
    <string name="contact_us">(<u>+91 9833371060</u>)</string>
    <string name="r_m"></string>
    <string name="seemore">...Read More</string>
    <string name="read_more">read more</string>
    <string name="ellipsis">Read More</string>
    <string name="under_weight_n_18_5"><![CDATA[Under Weight\n < 18.5]]></string>

    <string name="string_permission_help">Help</string>
    <string name="string_permission_help_text">The permission is missing.\n\nTo grant this permission click on Settings, then Permissions and turn the permission on.\n\nThen click back twice to return to the app</string>
    <string name="string_permission_quit">Exit App</string>
    <string name="string_settings">Settings</string>
    <string name="whoops">Whoops!</string>
    <string name="there_is_no_data">There is no data.</string>

    <string name="sell_edit_image_text_placeholder">+\nIMAGE</string>
    <string name="select_image_source_alert_title">Select Image</string>
    <string name="choose_the_way_source_to_upload_picture">Choose Image from Gallery/Camera</string>
    <string name="take_picture_title">Take Picture</string>
    <string name="pick_image_from_gallery_title">From Gallery</string>
    <string name="alert_cancel_button">Cancel</string>
    <string name="select_image_chooser_title">Select From Gallery</string>
    <string name="default_notification_channel_id">channel id</string>
    <string name="para_one">"SHAPE is the brainchild of Vinit Nalawade, who has over 20 years of rich experience in coaching and mentoring children in various sports fields. He has collaborated with various schools and sports academies to help them improvise and provide better all-round physical and mental development of the child. He has even conducted / organized national and international tournaments for which he has received many accolades. "</string>
    <string name="para_two">"The SHAPE App got conceptualized post some brainstorming sessions between Vinit and his mentor Kaisar Dopaishi as to what would be the way ahead for the children regarding their physical and mental wellbeing during and post the Covid pandemic, hence SHAPE came into being. . Over his years of experience he had observed that most children were not overall fit, by overall fit we mean their iron levels, D3 levels were mostly in the below normal range. To enable a healthy all round physically fit child the medical aspect of their health too has to be taken into consideration. Vinit noticed that this important aspect has so far been overlooked and not documented, hence he came up with the idea of developing SHAPE which not only focuses on the fitness of the child but also works on improving the inner strength and capability of the child by conducting regular medical tests. The App provides all round physical and mental assessment of the child in just a few clicks and also keeps the parent updated on the medical and physical progress of the child. "</string>
    <string name="para_three">"We have currently tie –ups with global/ international schools wherein we offer our services in regards to the physical and mental wellbeing of the child. The app helps the parent to track their child’s fitness in just a few clicks. The app is very user friendly and informative. The app updates the parent at regular intervals about the fitness level of their child and also helps them keep a tab on their behavioral skills. The app also keeps a tab on the medical fitness of the child by providing medical test facilities and co-ordinating the same. Consultations with empaneled doctors and nutritionists is also available on request via the app. "</string>
    <string name="para_four">"At SHAPE we aim to reach out to more schools and academies to help them enhance their sports section with the help of our app and services. We also look forward to going international in terms of collaborating with foreign schools and academies with our app. "</string>

</resources>