<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_bg"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bt_menu"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/back_ionic" />

            <TextView
                android:id="@+id/toolbr_lbl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/app_name"

                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bt_profile"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:tint="@android:color/white"
                app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <WebView
        android:id="@+id/webViewTerms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbr"
        android:visibility="gone" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_below="@+id/toolbr"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_view"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/abt_txt"
                android:text="@string/para_one" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/abt_txt"
                android:text="@string/para_two" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/abt_txt"
                android:layout_marginTop="10dp"
                android:text="@string/para_three" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/abt_txt"
                android:layout_marginTop="10dp"
                android:text="@string/para_four" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>