<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Fragment.AppointmentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/curve_inner_feed"
        android:orientation="vertical"
        tools:context=".Fragment.AppointmentFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginEnd="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_menu"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/back_ionic" />

                <TextView
                    android:id="@+id/toolbr_lbl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/app_name"

                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/bt_profile"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_baseline_notifications_none_24" />

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:text="@string/hello_blank_fragment">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <FrameLayout
                    android:id="@+id/frame_layout_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.exoplayer2.ui.PlayerView
                        android:id="@+id/player_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/background_dark"
                        app:controller_layout_id="@layout/custom_controller"
                        app:fastforward_increment="10000"
                        app:hide_on_touch="true"
                        app:player_layout_id="@layout/exo_simple_player_view"
                        app:resize_mode="fit"
                        app:rewind_increment="10000"
                        app:show_timeout="5000"
                        app:use_controller="true" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center" />
                </FrameLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lyt_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_medium"
                android:paddingRight="@dimen/spacing_large"
                android:paddingBottom="@dimen/spacing_medium">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="12 NOV 2020"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40"
                        android:textSize="14dp" />

                    <ImageView
                        android:id="@+id/share"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="90dp"
                        android:gravity="center_vertical"
                        android:src="@drawable/share"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />

                    <TextView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end"
                        android:background="@drawable/circle_btn_event"
                        android:gravity="center_vertical"
                        android:text="Interested"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/spacing_middle"
                        android:visibility="visible" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:gravity="center_vertical"
                        android:src="@drawable/ic_baseline_location_on_24"
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center_vertical"
                        android:text="Vashi "
                        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                        android:textColor="@color/grey_40" />


                </LinearLayout>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"

                    android:text="@string/lorm"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_80"
                    app:fontFamily="sans-serif-medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:background="@color/grey_5" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"

                    android:text="@string/lorm"
                    android:textColor="@color/grey_80"
                    android:textStyle="normal"
                    app:fontFamily="sans-serif-medium" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</ScrollView>